# FPS

./: .gitignore  CMakeLists.txt  CMakeLists.txt.model  Projet1.sln  Readme.md  TestSFML.cbp  TestSFML.cscope_file_list  TestSFML.depend  TestSFML.layout  apprentissage sdl.cbp  apprentissage sdl.depend  apprentissage sdl.layout  coin.cpp  coin.h  gameobject.cpp  gameobject.h  ghost.cpp  ghost.h  main.cpp  map.cpp  map.h  map.txt  pacmanprojet.vcxproj  pacmanprojet.vcxproj.filters  view.cpp  view.h
Clion_Build/: CMakeCache.txt  Makefile  Pacman.cbp  cmake_install.cmake
Debug/: map.txt  vc140.idb
Debug/img/: pacman.psd
Debug/pacmanprojet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pacmanprojet.lastbuildstate
Projet1/: Projet1.vcxproj  main.cpp
Projet1/Debug/: vc140.idb
Projet1/Debug/Projet1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Projet1.lastbuildstate
Projet1/Release/Projet1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Projet1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: Projet1.iobj  Projet1.ipdb
Release/pacmanprojet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pacmanprojet.lastbuildstate
src/: main.cpp  mainOLD.cpp
src/controller/: Controller.cpp  Controller.h
src/model/: Model.cpp  Model.h
src/util/: Enemy.cpp  Enemy.h  Gameobject.cpp  Gameobject.h  Map.cpp  Map.h  Object.cpp  Object.h  Piece.cpp  Piece.h  Skybox.cpp  Skybox.h
src/view/: View.cpp  View.h
(+5 files in other folders)
